--- a/templates/forms/changePassword.html
+++ b/templates/forms/changePassword.html
@@ -12,18 +12,18 @@
 
 {% block main %}
 <section class="form-title">
-    <h1 class="secondary-box">Changing password</h1>
+    <h1 class="secondary-box" aria-label="form title">Changing password</h1>
 </section>
 <form class="card form-card" method="post">
     <section class="input-group">
         <p><i class="fa-solid fa-key"></i> new password</p>
-        <input type="password" placeholder="new password" name="password" aria-label="password-input" value="{{ values.password }}">
+        <input type="password" placeholder="new password" name="password" aria-label="password input" value="{{ values.password }}">
     </section>
     <section class="input-group">
         <p><i class="fa-solid fa-key"></i> repeat password</p>
-        <input type="password" placeholder="repeat new password" name="confirmPassword" aria-label="confirm-password-input" value="{{ values.confirmPassword }}">
+        <input type="password" placeholder="repeat new password" name="confirmPassword" aria-label="confirm password input" value="{{ values.confirmPassword }}">
     </section>
-    <button class="primary-button margin-y" type="submit" aria-label="confirm">
+    <button class="primary-button margin-y" type="submit" aria-label="confirm button">
         <span class="ts-sm" aria-hidden="true">
             Change password
         </span>
@@ -31,12 +31,12 @@
     <section class="errors-container">
         {% if errors %}
             {% for value in errors.values() %}
-            <p class="error-message"><i class="fa-solid fa-triangle-exclamation"></i> {{ value[0] }}</p>
+            <p class="error-message" aria-label="error message"><i class="fa-solid fa-triangle-exclamation"></i> {{ value[0] }}</p>
             {% endfor %}
         {% endif %}
     </section>
 </form>
-<a class="primary-button back-button" href="{{ url_for('user_data', id=session.get('idUser')) }}">
+<a class="primary-button back-button" href="{{ url_for('user_data', id=session.get('idUser')) }}" aria-label="back button">
     <span class="ts-sm" aria-hidden="true">
         Back
     </span>
