--- a/templates/pages/landingPage.html
+++ b/templates/pages/landingPage.html
@@ -12,10 +12,10 @@
 {% block main %}
 
 <h1 class="welcome-heading" role="heading" aria-label="welcoming"><span style="font-size: 3rem;color: black;">Welcome</span><br> to E-voting Application</h1>
-<p class="welcome-subtitle" aria-label="welcome-subtitle">
+<p class="welcome-subtitle" aria-label="welcome subtitle">
     You can easily create votes and give your vote from every place on the earth.<br> Everything efficient, fast and secure with our system
 </p>
-<p class="welcome-subtitle" aria-label="register-instruction" style="font-size: 1.4rem;">
+<p class="welcome-subtitle" aria-label="register instruction" style="font-size: 1.4rem;">
     Register now, just by clicking the button below
 </p>
 <section class="margin-y">
