--- a/templates/forms/changeData.html
+++ b/templates/forms/changeData.html
@@ -12,18 +12,18 @@
 
 {% block main %}
 <section class="form-title">
-    <h1 class="secondary-box">Changing user data</h1>
+    <h1 class="secondary-box" aria-label="form title">Changing user data</h1>
 </section>
 <form class="card form-card" method="post">
     <section class="input-group">
         <p><i class="fa-solid fa-user"></i> Name</p>
-        <input type="text" placeholder="new name" name="name" aria-label="name-input" value="{{ values.name }}">
+        <input type="text" placeholder="new name" name="name" aria-label="name input" value="{{ values.name }}">
     </section>
     <section class="input-group">
         <p><i class="fa-solid fa-user"></i> Surname</p>
-        <input type="text" placeholder="new surname" name="surname" aria-label="name-input" value="{{ values.surname }}">
+        <input type="text" placeholder="new surname" name="surname" aria-label="surname input" value="{{ values.surname }}">
     </section>
-    <button class="primary-button" style="margin-top: 1rem;" type="submit" aria-label="confirm">
+    <button class="primary-button" style="margin-top: 1rem;" type="submit" aria-label="confirm button">
         <span class="ts-sm" aria-hidden="true">
             Change name and surname
         </span>
@@ -31,12 +31,12 @@
     <section class="errors-container">
         {% if errors %}
             {% for value in errors.values() %}
-            <p class="error-message"><i class="fa-solid fa-triangle-exclamation"></i> {{ value[0] }}</p>
+            <p class="error-message" aria-label="error message"><i class="fa-solid fa-triangle-exclamation"></i> {{ value[0] }}</p>
             {% endfor %}
         {% endif %}
     </section>
 </form>
-<a class="primary-button back-button" href="{{ url_for('user_data', id=session.get('idUser')) }}">
+<a class="primary-button back-button" href="{{ url_for('user_data', id=session.get('idUser')) }}" aria-label="back button">
     <span class="ts-sm" aria-hidden="true">
         Back
     </span>
