--- a/templates/forms/changeEmail.html
+++ b/templates/forms/changeEmail.html
@@ -12,14 +12,14 @@
 
 {% block main %}
 <section class="form-title">
-    <h1 class="secondary-box">Changing email adress</h1>
+    <h1 class="secondary-box" aria-label="form title">Changing email adress</h1>
 </section>
 <form class="card form-card" method="post">
     <section class="input-group">
         <p><i class="fa-solid fa-envelope"></i> Email</p>
-        <input type="email" placeholder="new Email" name="email" aria-label="email-input" value="{{ values.email }}">
+        <input type="email" placeholder="new Email" name="email" aria-label="email input" value="{{ values.email }}">
     </section>
-    <button class="primary-button margin-y" type="submit" aria-label="confirm">
+    <button class="primary-button margin-y" type="submit" aria-label="confirm button">
         <span class="ts-sm" aria-hidden="true">
             Change email adress
         </span>
@@ -27,12 +27,12 @@
     <section class="errors-container">
         {% if errors %}
             {% for value in errors.values() %}
-            <p class="error-message"><i class="fa-solid fa-triangle-exclamation"></i> {{ value[0] }}</p>
+            <p class="error-message" aria-label="error message"><i class="fa-solid fa-triangle-exclamation"></i> {{ value[0] }}</p>
             {% endfor %}
         {% endif %}
     </section>
 </form>
-<a class="primary-button back-button" href="{{ url_for('user_data', id=session.get('idUser')) }}">
+<a class="primary-button back-button" href="{{ url_for('user_data', id=session.get('idUser')) }}" aria-label="back button">
     <span class="ts-sm" aria-hidden="true">
         Back
     </span>
