--- a/templates/pages/preview.html
+++ b/templates/pages/preview.html
@@ -17,27 +17,27 @@
 {% block main %}
     <section class="main-container">
         <section class="vote-title">
-            <h1>{{ vote.title }}</h1>
+            <h1 aria-label="vote title">{{ vote.title }}</h1>
             <div class="primary-spliter"></div>
         </section>
         <section class="author">
             <h3>Vote created by: {{ user.name + " " + user.surname}}</h3>
-            <a href="{{ url_for('user_data', id=user.id) }}" class="primary-button">
+            <a href="{{ url_for('user_data', id=user.id) }}" class="primary-button" aria-label="view creator button">
                 View creator
             </a>
         </section>
         <section class="dates-container">
-            <section class="{{ 'success-message' if vote.status == 'In progress' else 'warning-message' if vote.status == 'Waiting' else 'error-message' }}">
+            <section class="{{ 'success-message' if vote.status == 'In progress' else 'warning-message' if vote.status == 'Waiting' else 'error-message' }}" aria-label="vote status">
                 <h3>{{ vote.status }}</h3>
             </section>
             {% if vote.status == "Ended" %}
                 <section class="success-message">
-                    <h3>Winner: {{ (vote.options|max(attribute='votingCount')).name }}</h3>
+                    <h3 aria-label="vote winner">Winner: {{ (vote.options|max(attribute='votingCount')).name }}</h3>
                 </section>
             {% endif %}
-            <section class="flex-center">
-                <p>Start date: {{ vote.startDate }}</p>
-                <p>End date: {{ vote.endDate }}</p>
+            <section class="flex-center" aria-label="vote dates">
+                <p aria-label="start date">Start date: {{ vote.startDate }}</p>
+                <p aria-label="end date">End date: {{ vote.endDate }}</p>
             </section>
         </section>
         <section class="description-title">
@@ -46,7 +46,7 @@
         </section>
         <section class="description">
             <section>
-                <p>{{ vote.description }}</p>
+                <p aria-label="vote description">{{ vote.description }}</p>
             </section>
         </section>
         <section class="realtime-results">
@@ -56,7 +56,7 @@
             <h2 style="text-align: center;">Vote Options</h2>
             <div class="primary-spliter"></div>
         </section>
-        <section class="votes-options">
+        <section class="votes-options" aria-label="vote options">
             {% for voteOption in vote.options|sort(attribute='name') %}
                 {% if vote.realTimeResults or vote.status == "Ended" %}
                     <p><span style="font-weight: bold;">{{ voteOption.name }}</span> votes: {{ voteOption.votingCount }}</p>
@@ -66,38 +66,38 @@
             {% endfor %}
         </section>
         {% if not (vote.realTimeResults or vote.status == "Ended") %}
-            <p class="results-info-tip" style="font-weight: bold;margin-top: 2rem;">*Vote results will be displayed when voting has ended*</p>
+            <p class="results-info-tip" style="font-weight: bold;margin-top: 2rem;" aria-label="vote results tip">*Vote results will be displayed when voting has ended*</p>
         {% endif %}
         {% if not vote.status == "Ended" %}
             {% if not vote.status == "Waiting" %}
                 {% if not alreadyVoted %}
-                    <section class="error-message" style="margin-top: 1rem;">
+                    <section class="error-message" style="margin-top: 1rem;" aria-label="not voted">
                         You haven't voted yet!
                     </section>
                     <a href="{{ url_for('voting', idVote=vote.id)}}">
-                        <button class="primary-button back-button">
+                        <button class="primary-button back-button" aria-label="vote button">
                             <span class="ts-xl">
                                 Vote!
                             </span>
                         </button>
                     </a>
                 {% else %}
-                    <section class="success-message" style="margin-top: 1rem;">
+                    <section class="success-message" style="margin-top: 1rem;" aria-label="already voted">
                         You already voted!
                     </section>
                 {% endif %}
             {% else %}
-                <section class="warning-message" style="margin-top: 1rem;">
+                <section class="warning-message" style="margin-top: 1rem;" aria-label="vote haven't started">
                     Voting haven't started yet!
                 </section>
             {% endif %}
         {% else %}
-            <section class="error-message" style="margin-top: 1rem;">
+            <section class="error-message" style="margin-top: 1rem;" aria-label="already ended">
                 Voting already ended!
             </section>
         {% endif %}
         <a href="{{ url_for(originPage)}}">
-            <button class="primary-button back-button">
+            <button class="primary-button back-button" aria-label="back button">
                 <span class="ts-lg">
                     Back
                 </span>
