--- a/styles/user.css
+++ b/styles/user.css
@@ -19,6 +19,13 @@
     margin-bottom: 2rem;
 }
 
+.description {
+    margin: 2.4rem 0;
+    font-size: 1.2rem;
+    width: 50%;
+    text-align: center;
+}
+
 @media screen and (max-width: 480px) {
     .profile-description {
         flex-direction: column;
